[package]
name = "cubicbattle"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
name = "cubicbattle"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
macroquad = "0.4"

[package.metadata.android]
package_name = "com.cubicbattle.x"
label = "Cubic Battle X"
target_sdk_version = 30
min_sdk_version = 21
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
assets = "assets"
